--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,8 @@ jwt.expiration=3600000
 jwt.secret=asdfasdfasdfasdfasdf
 
 # general stuff
-server.port=8080
+server.port=8182
 
 # dissable error page
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:6666/jwt_auth?autoReconnect=true&useSSL\
-  =false&allowPublicKeyRetrieval=true
-spring.datasource.username=dev-user
-spring.datasource.password=dev-password
